--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vanta": "^0.5.24"
   },
   "devDependencies": {
+    "@types/node": "^20.9.0",
     "@types/react": "18.2.33",
     "typescript": "5.2.2"
   }
