--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.288.0",
     "next": "^14.0.1",
+    "next-seo": "^6.4.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
     "react": "^18.2.0",
