--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "ionicons": "^7.2.2",
     "lucide-react": "^0.288.0",
     "next": "^14.0.1",
     "next-seo": "^6.4.0",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/node": "^20.9.0",
     "@types/react": "18.2.33",
+    "@types/three": "^0.160.0",
     "typescript": "5.2.2"
   }
 }
